# savor-recipes

./: .gitignore  README.md  main.py  package-lock.json  project_structure.txt  pyproject.toml  requirements.txt  todo.md  todo.txt
backend/: pyproject.toml  requirements.txt
backend/api/: admin.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/recipes/: __models.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/recipes/management/commands/: load_equipment.py  load_tags.py
backend/recipes/migrations/: 0001_initial.py  0002_initial.py  0002_recipe_author_delete_author.py  0003_recipe_updated_at_alter_recipe_images.py
backend/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  tailwind.config.js  todo.txt
frontend/src/: App.jsx  api.js  api_depr.js  index.css  main.jsx  package.json  vite.config.js
frontend/src/components/: AuthForm.jsx  AuthForm2_depr.jsx  Home.jsx  Landing.jsx  LoadingSpinner.jsx  Login.jsx  Navbar.jsx  NotFound.jsx  PasswordResetConfirm.jsx  ProtectedRoute.jsx  Recipe.jsx  RecipeCard.jsx  RecipeDetail.jsx  RecipeForm.jsx  RecipeList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/contexts/: AuthContext.js  AuthContext.jsx  AuthContext_depr
frontend/src/pages/: Dashboard.jsx  DashboardPage.jsx  (+13 more)
python/: clean_data.py
(+1 files in other folders)
